test/integration/good/laplace/pretty.expected
  $ ../../../../../install/default/bin/stanc --auto-format laplace_marginal.stan
Warning in 'laplace_marginal.stan', line 2, column 36: Declaration of arrays
    by placing brackets after a type is deprecated and will be removed in
    Stan 2.32.0. Instead use the array keyword before the type. This can be
    changed automatically using the auto-format flag to stanc
Warning in 'laplace_marginal.stan', line 2, column 50: Declaration of arrays
    by placing brackets after a type is deprecated and will be removed in
    Stan 2.32.0. Instead use the array keyword before the type. This can be
    changed automatically using the auto-format flag to stanc
Warning in 'laplace_marginal.stan', line 7, column 52: Declaration of arrays
    by placing brackets after a type is deprecated and will be removed in
    Stan 2.32.0. Instead use the array keyword before the type. This can be
    changed automatically using the auto-format flag to stanc
Warning in 'laplace_marginal.stan', line 15, column 2: Declaration of arrays
    by placing brackets after a variable name is deprecated and will be
    removed in Stan 2.32.0. Instead use the array keyword before the type.
    This can be changed automatically using the auto-format flag to stanc
Warning in 'laplace_marginal.stan', line 20, column 2: Declaration of arrays
    by placing brackets after a variable name is deprecated and will be
    removed in Stan 2.32.0. Instead use the array keyword before the type.
    This can be changed automatically using the auto-format flag to stanc
Warning in 'laplace_marginal.stan', line 21, column 2: Declaration of arrays
    by placing brackets after a variable name is deprecated and will be
    removed in Stan 2.32.0. Instead use the array keyword before the type.
    This can be changed automatically using the auto-format flag to stanc
Semantic error in 'laplace_marginal.stan', line 38, column 54 to column 65:
   -------------------------------------------------
    36:  model {
    37:    // lpdf signatures
    38:    target += laplace_marginal_lpdf(delta_L | L_f, eta, delta_int_L, 
                                                               ^
    39:                                    K_f, phi, x, delta_K, delta_int_K,
    40:                                    theta0, tol, max_num_steps,
   -------------------------------------------------

Laplace initialization must be of type vector. Instead found type array[] int.
  $ ../../../../../install/default/bin/stanc --auto-format laplace_marginal_bernoulli_logit.stan
functions {
  matrix K(array[] vector x, vector phi, array[] real delta,
           array[] int delta_int) {
    matrix[1, 1] covariance;
    return covariance;
  }
  
  matrix Km(matrix x, vector phi, array[] real delta, array[] int delta_int) {
    matrix[1, 1] covariance;
    return covariance;
  }
}
transformed data {
  array[1] int y;
  array[1] int n_samples;
  
  vector[1] phi;
  array[1] vector[1] x;
  matrix[1, 1] x_m;
  array[1] real delta;
  array[1] int delta_int;
  
  vector[1] theta0;
}
parameters {
  vector[1] phi_v;
  vector[1] theta0_v;
}
model {
  target += laplace_marginal_bernoulli_logit_lpmf(y | n_samples, theta0, K, x, phi, delta, delta_int);
  
  target += laplace_marginal_bernoulli_logit_lpmf(y | n_samples, theta0, Km, x_m, phi, delta, delta_int);
}
generated quantities {
  vector[1] theta_pred = laplace_marginal_bernoulli_logit_rng(y, n_samples,
                                                              theta0, K,
                                                              forward_as_tuple(
                                                              x),
                                                              forward_as_tuple(
                                                              x), phi, delta,
                                                              delta_int);
  theta_pred = laplace_marginal_bernoulli_logit_rng(y, n_samples, theta0, Km,
                                                    forward_as_tuple(
                                                    x_m),
                                                    forward_as_tuple(
                                                    x_m), phi, delta,
                                                    delta_int);
}

  $ ../../../../../install/default/bin/stanc --auto-format laplace_marginal_poisson_log.stan
functions {
  matrix covar_fun(vector x, real alpha) {
    matrix[1, 1] covariance;
    return covariance;
  }
}
transformed data {
  array[1] int y;
  array[1] int n_samples;
  vector[1] theta0;
  vector[1] x;
}
parameters {
  real alpha;
}
model {
  target += laplace_marginal_poisson_log_lpmf(y | n_samples, theta0, covar_fun, x, alpha);
  y ~ laplace_marginal_poisson_log(n_samples, theta0, covar_fun, x, alpha);
}
generated quantities {
  vector[1] y_pred = laplace_marginal_poisson_log_rng(y, n_samples, theta0,
                                                      covar_fun,
                                                      forward_as_tuple(
                                                      x),
                                                      forward_as_tuple(
                                                      x), alpha);
}

  $ ../../../../../install/default/bin/stanc --auto-format poisson_log_err1.stan
Semantic error in 'poisson_log_err1.stan', line 26, column 12 to column 75:
   -------------------------------------------------
    24:    
    25:  
    26:    target += laplace_marginal_poisson_log_lpmf(y , theta0, covar_fun, alpha);
                     ^
    27:   
    28:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_poisson_log_lpmf':
(array[] int)
Available signatures:
(array[] int, array[] int) => real
  Expected 2 arguments but found 1 arguments.
(int, array[] int) => real
  Expected 2 arguments but found 1 arguments.
(array[] int, int) => real
  Expected 2 arguments but found 1 arguments.
(int, int) => real
  Expected 2 arguments but found 1 arguments.
  $ ../../../../../install/default/bin/stanc --auto-format poisson_log_err2.stan
Semantic error in 'poisson_log_err2.stan', line 26, column 12 to column 64:
   -------------------------------------------------
    24:    
    25:  
    26:    target += laplace_marginal_poisson_log_lpmf( covar_fun, alpha);
                     ^
    27:  
    28:  }
   -------------------------------------------------

Laplace approximation requires distribution arguments and initalization
before function argument.
  $ ../../../../../install/default/bin/stanc --auto-format poisson_log_err3.stan
Semantic error in 'poisson_log_err3.stan', line 20, column 12 to column 79:
   -------------------------------------------------
    18:  model {
    19:    
    20:    target += laplace_marginal_poisson_log_lpmf(y | n_samples, theta0, covar_fun);
                     ^
    21:  
    22:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_poisson_log_lpmf':
(array[] int, array[] int, vector, <F1>)
where F1 = (vector, real) => matrix
Available signatures:
(data array[] int, data array[] int, data vector, <F1>, vector, real) => matrix
  Expected 3 arguments but found 1 arguments.
  $ ../../../../../install/default/bin/stanc --auto-format poisson_log_err4.stan
Semantic error in 'poisson_log_err4.stan', line 19, column 12 to column 93:
   -------------------------------------------------
    17:  
    18:  model {
    19:    target += laplace_marginal_poisson_log_lpmf(y | n_samples, theta0, covar_fun, alpha, alpha);
                     ^
    20:  }
    21:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_poisson_log_lpmf':
(array[] int, array[] int, vector, <F1>, real, real)
where F1 = (vector, real) => matrix
Available signatures:
(data array[] int, data array[] int, data vector, <F1>, vector, real) => matrix
  The second argument must be vector but got real
  $ ../../../../../install/default/bin/stanc --auto-format poisson_log_err5.stan
Semantic error in 'poisson_log_err5.stan', line 17, column 2 to column 65:
   -------------------------------------------------
    15:  model {
    16:    
    17:    y ~ laplace_marginal_poisson_log(n_samples, theta0, covar_fun);
           ^
    18:  
    19:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_poisson_log_lpmf':
(array[] int, array[] int, vector, <F1>)
where F1 = (vector, real) => matrix
Available signatures:
(data array[] int, data array[] int, data vector, <F1>, vector, real) => matrix
  Expected 3 arguments but found 1 arguments.
